# crypto-quant-desk

./: .env.example  .gitignore  CLAUDE.md  README.md  progress.txt  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: APP_FLOW.md  BACKEND_STRUCTURE.md  FRONTEND_GUIDELINES.md  IMPLEMENTATION_PLAN.md  PRD.md  TECH_STACK.md  lessons.md
packaging/: README.md  build_dmg.sh  crypto-quant-desk.spec
packaging/windows/: cqd.icns  cqd.spec  installer.iss  make_icon.py  version_info.txt
src/cqd/: __init__.py  __main__.py  app.py
src/cqd/alerts/: __init__.py  engine.py  notify.py
src/cqd/analyst/: context.py  llm.py  narrate.py
src/cqd/data/: cache.py  client.py  credentials.py  demo.py  errors.py  exchange.py  normalize.py  paths.py  portfolio.py  rest.py  returns.py  sectors.py  symbols.py  ws.py
src/cqd/engine/: cost_basis.py  metrics.py  performance.py  risk.py  scenario.py
src/cqd/trading/: __init__.py  audit.py  limits.py  orders.py  paper.py
src/cqd/ui/: format.py  main_window.py  services.py  settings_store.py  stream.py  symbol_hub.py  workspace.py
src/cqd/ui/dialogs/: __init__.py  first_run.py  order_confirm.py  settings.py
src/cqd/ui/panels/: alerts.py  analyst.py  analytics.py  base.py  book.py  chart.py  orders.py  performance.py  positions.py  risk.py  tape.py  ticket.py  watchlist.py
src/cqd/ui/theme/: __init__.py  colors.py  kraken_dark.qss
src/cqd/ui/widgets/: __init__.py
tests/: conftest.py  test_alerts.py  test_analyst_context.py  test_analytics.py  test_audit.py  test_book.py  test_chart.py  test_cost_basis.py  test_credentials.py  test_demo.py  test_exchange.py  test_format.py  test_limits.py  test_narrate.py  test_normalize.py  test_orders.py  test_paper.py  test_performance.py  test_platform.py  test_portfolio.py  test_positions_panel.py  test_rest.py  test_returns.py  test_risk.py  test_risk_panel.py  test_scenario.py  test_sectors.py  test_services.py  test_symbols.py  test_tape.py  test_theme.py  test_ticket_logic.py  test_watchlist.py  test_widgets.py  test_workspace.py  test_ws.py
