[project]
name = "crypto-quant-desk"
version = "0.1.0"
description = "A standalone desktop quant analytics app for Kraken portfolios"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Joe" }]
dependencies = [
    "PySide6>=6.7",
    "qasync>=0.27",
    "pyqtgraph>=0.13",
    "pydantic>=2.7",
    "pandas>=2.2",
    "numpy>=1.26",
    "diskcache>=5.6",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "keyring>=25.0",
    "websockets>=12.0",
    "winotify>=1.1; sys_platform == 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "pyinstaller>=6.0",
]

[project.scripts]
cqd = "cqd.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cqd"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
